# pinn_service

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SESSION_REPORT.md  pyproject.toml
benchmarks/: automl_vs_manual.py  inverse_tuning_sweep.py  retest_battery.py
docs/: ENGINE.md  actuated_dynamics_experiments.md  adaptive_controller.md  burgers_experiments.md  contact_experiments.md  cosserat_causal_experiments.md  cosserat_planar_experiments.md  deepxde_patterns.md  diffusion_1d_experiments.md  dynamic_cosserat_experiments.md  dynamic_spatial_cosserat_experiments.md  fisher_kpp_experiments.md  hyperelastic_experiments.md  literature_comparison.md  multi_contact_experiments.md  pde_zoo_experiments.md  pneumatic_actuation_experiments.md  soft_robotics_elastica_experiments.md  spatial_cosserat_experiments.md  tendon_actuation_experiments.md  viscoelastic_experiments.md  viscohyperelastic_experiments.md
examples/: 01_damped_oscillator.py  02_lorenz_inverse.py  03_automl_search.py
logs/: 1ff4955a30474f4680aab0a6ac4a6726_live.json  31fbdb4cda8d45969ee3aafd3dc96939_adaptive_summary.json  40b1b19497454881a1f8c7f803aa08a3_live.json  47b2886b873142d3b5e41fd58a787de4_live.json  50900a868cd449d892e11a935bf4d606_live.json  50900a868cd449d892e11a935bf4d606_summary.json  76aafdcd82a248098e2c867bd207ee6b_live.json  7e2696aa8eb24222a48e12fd1edba6e2_adaptive_summary.json  7e2696aa8eb24222a48e12fd1edba6e2_live.json  8cc08c1b7be044be839e5fea00d841f1_live.json  940de90403944019a12e03b0ee3bbbe4_live.json  9a9c5932c52544fc8a9c8e57ffa49cf4_live.json  cosserat_causal_20260524_051611.out  (+27 more)
(+120 files in other folders)
