[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pinn-engine"
version = "0.1.0"
description = "Open-source inverse PINN engine: equation DSL + AutoML architecture search + physics-guaranteed parameter discovery."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "pinn_service"}]

dependencies = [
    "torch>=2.1",
    "pytorch-lightning>=2.1",
    "pina-mathlab>=0.1",
    "sympy>=1.12",
    "numpy>=1.24",
    "scipy>=1.10",
    "einops>=0.7",
    "optuna>=3.5",
    "optuna-integration[pytorch-lightning]>=3.5",
    "typer>=0.9",
    "pydantic>=2.5",
    "rich>=13.0",
    "matplotlib>=3.7",
    "gitpython>=3.1",
    "h5py>=3.10",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "optuna-dashboard>=0.15",
]

[project.scripts]
pinn-engine = "pinn_engine.cli:app"

[tool.setuptools.packages.find]
include = ["pinn_engine*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
